<resources>
    <string name="app_name">Sberinvestor</string>
    <string name="title_login">Module Title</string>
    <string name="title_dashboard">Module Dashboard</string>
    <string name="title_balance">Module Balance</string>
    <string name="title_market">Module Market</string>
    <string name="title_news">Module News</string>
    <string name="title_profile">Module Profile</string>
    <string name="title_uitests">Module UI Tests</string>

    <!--Bottom menu-->
    <string name="balance">Balance</string>
    <string name="login">Login</string>
    <string name="market">Market</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_simplefeature">Simple Module</string>
</resources>
