<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/commonLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/dashboardUnderConstructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/under_construction"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_market"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underConstructionTextView"/>

    <Button
        android:id="@+id/button_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        app:layout_constraintEnd_toStartOf="@+id/button_market"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_market"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market"
        app:layout_constraintEnd_toStartOf="@+id/button_news"
        app:layout_constraintBottom_toBottomOf="@+id/button_balance"
        app:layout_constraintStart_toEndOf="@+id/button_balance" />

    <Button
        android:id="@+id/button_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news"
        app:layout_constraintEnd_toStartOf="@+id/button_profile"
        app:layout_constraintBottom_toBottomOf="@+id/button_market"
        app:layout_constraintStart_toEndOf="@+id/button_market" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="@+id/button_news"
        app:layout_constraintStart_toEndOf="@+id/button_news"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
